Finished final version of card face.

--- a/card.html
+++ b/card.html
@@ -17,10 +17,8 @@
     <div class="trading-card">
       <!-- ## Trading Card Header -->
       <div class="trading-card-header">
-        <div class="trading-card-level">
-          <!-- <i class="ra ra-lg ra-wolf-head"></i> -->
-          Lv.4
-        </div>
+        <span class="trading-card-level">Lv.4</span>
+        <h3 class="trading-card-title">Alfhildr, Scourge of Blackmarsh</h3>
         <div class="trading-card-type">
           <ul>
             <li>Creature</li>
@@ -29,7 +27,6 @@
           </ul>
           <div class="clearfix"></div>
         </div>
-        <h3 class="trading-card-title">Alfhildr, Scourge of Blackmarsh</h3>
       </div> <!-- /.trading-card-header -->
 
       <!-- ## Trading Card Body -->
@@ -37,44 +34,26 @@
         <div class="trading-card-image">
           <img src="img/werewolf4.jpg" alt="Alfhildr, Scourge of Blackmarsh snarling and standing menacingly with his shamanic staff in hand.">
         </div>
-
-        <!-- secondary title placement here! -->
-
-        <!-- <div class="trading-card-stats">
-        </div> -->
-
         <div class="trading-card-info">
-          <ul class="trading-card-stats">
-            <!-- Health/Hit Points -->
+          <p class="trading-card-text">If Alfhildr enters the battlefield at night, you may cast a free spell as Alfhildr. Alfhildr has advantage while casting spells at night.</p>
+
+          <ul class="trading-card-list">
+            <li><i class="ra ra-hand"></i> <strong>Ability Scores:</strong></li>
             <li><span class="trading-card-label" title="Hit Points"><i class="ra ra-health"></i></span> 25</li>
-            <!-- <li><span class="trading-card-label"><i class="ra ra-round-bottom-flask"></i></span> 25</li> -->
-            <!-- <li><span class="trading-card-label"><i class="ra ra-corked-tube"></i></span> 25</li> -->
-            <!-- Armour Class -->
-            <!-- <li><span class="trading-card-label"><i class="ra ra-round-shield"></i></span> 11</li> -->
-            <li><span class="trading-card-label" title="Armour Class"><i class="ra ra-shield"></i></span> 11</li>
-            <!-- Physical Points -->
+            <li><span class="trading-card-label" title="Armour Class"><i class="ra ra-round-shield"></i></span> 11</li>
             <li><span class="trading-card-label" title="Physical Points"><i class="ra ra-sword"></i></span> 1d6</li>
-            <!-- <li><span class="trading-card-label"><i class="ra ra-crossed-swords"></i></span> 1d6</li> -->
-            <!-- <li><span class="trading-card-label"><i class="ra ra-plain-dagger"></i></span> 1d6</li> -->
-            <!-- Magic Points -->
-            <!-- <li><span class="trading-card-label"><i class="ra ra-crystal-wand"></i></span> 1d12</li> -->
-            <!-- <li><span class="trading-card-label"><i class="ra ra-book"></i></span> 1d12</li> -->
             <li><span class="trading-card-label" title="Magic Points"><i class="ra ra-scroll-unfurled"></i></span> 1d12</li>
           </ul>
-
-          <br>
           <div class="clearfix"></div>
-          <hr>
 
-          <p class="trading-card-text">If Alfhildr enters the battlefield at night, you may cast a free spell as Alfhildr. Alfhildr has advantage while casting spells at night.</p>
           <ul class="trading-card-list">
-            <li class="trading-card-list-title"><i class="ra ra-book"></i> Spells known:</li>
+            <li><i class="ra ra-book"></i> <strong>Spell book:</strong></li>
             <li>Detect magic</li>
             <li>Shapeshift</li>
             <li>Silence</li>
-            <!-- <li>Magic Missile</li> -->
           </ul>
           <div class="clearfix"></div>
+          <hr>
           <p class="trading-card-text flavor">The werewolf is a widespread concept in European folklore, existing in many variants, developed during the medieval period.</p>
         </div>
       </div> <!-- /.trading-card-body -->
@@ -83,7 +62,7 @@
       <div class="trading-card-footer">
         <p class="trading-card-text legal float-left"><span class="trading-card-label"><i class="ra ra-quill-ink"></i> Artist:</span> <a target="_blank" href="http://powerlisting.wikia.com/wiki/File:Werewolf-shaman-werewolves-3893595-504-750.jpg">Unknown</a>&nbsp; | &nbsp;</p>
         <p class="trading-card-text legal float-left"><span class="trading-card-label"><i class="ra ra-hammer"></i> Designer:</span> Jordan Brauer</p>
-        <p class="trading-card-text legal float-right"><i class="ra ra-lg ra-wolf-head"></i> <span class="trading-card-label">ID#:</span> 001/001</p>
+        <p class="trading-card-text legal float-right"><i class="ra ra-lg ra-wolf-head trading-card-set-symbol"></i> <span class="trading-card-label">ID#:</span> 001/001</p>
         <div class="clearfix"></div>
       </div> <!-- /.trading-card-footer -->
     </div> <!-- /.trading-card -->
